--- a/Regression/simple_linear_reg.ipynb
+++ b/Regression/simple_linear_reg.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# 1.Simple Linear Regression\n",
     "## Y = &#593;<sub>0</sub> + b<sub>1</sub>X<sub>1</sub>\n",
-    "<img src=\"./reg_photos/slr.png\">\n",
+    "![alt text](./reg_photos/slr.png)\n",
     "\n",
     "here, \n",
     "- **Y** is Dependent variable\n",
