--- a/data_preprocessing/import_dataset.ipynb
+++ b/data_preprocessing/import_dataset.ipynb
@@ -261,7 +261,9 @@
     "### Feature scaling\n",
     "- Feature Scaling is a technique to standardize the independent features(variables) present in the data in a fixed range. \n",
     "- performed to handle highly varying magnitudes or values or units.\n",
-    "<img src=\"feature_scaling.jpg\" alt=\"drawing\" width=\"800\">\n",
+    "\n",
+    "![alt text](./feature_scaling.jpg)\n",
+    "\n",
     "- standardisation works all the time, Normalisation works well with dataset that have normal distribution.\n",
     "\n",
     "*matrix of feature*\n",
@@ -270,7 +272,9 @@
     "- **The Scaler** is fitted only to **x_train**.\n",
     "---\n",
     "- we are **not allowed** to fit our Feature scaling on the **test set** with **traing set** because we would get **mean & standard deviation** in the features(variables values) and lead to leakege of data.\n",
-    "- <img src=\"train_test_set.png\" alt=\" training and test set\" height=\"200px\">\n",
+    "\n",
+    "- ![training and test set](./train_test_set.png)\n",
+    "\n",
     "- we are **not allowed** to fit feature scaling on **dumy variables**(Categories that have been transformed using One Hot Encoding) as it wound disrupt the Encoding of data.\n",
     "---\n",
     "\n",
