linked maths for ml

--- a/Regression/multiple_linear_reg.ipynb
+++ b/Regression/multiple_linear_reg.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1.Multiple Linear Regression\n",
+    "## Checkout \n",
+    "<a href=\"./maths_for_ml.md\"> Model selection and statistics for ML</a>\n",
+    "# Multiple Linear Regression\n",
     "### A statistical technique that uses two or more independent variables to predict the outcome of a dependent variable.\n",
     "\n",
     "## $$ y = b_0 + b_1X_1 + b_2X_2 + b_3X_3 + ... + b_8D_1 + b_9D_2 $$\n",
