added backwards elimination

--- a/Regression/multiple_linear_reg.ipynb
+++ b/Regression/multiple_linear_reg.ipynb
@@ -229,6 +229,16 @@
     "np.set_printoptions(precision=2)\n",
     "print(np.concatenate((results.reshape(len(results), 1), y_test.reshape(len(y_test), 1)), axis=1))\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Note:\n",
+    "- sklearn.linear_model import LinearRegression, handels the Model selction automatical.\n",
+    "- if using other libraries or languages (' R '), one has to take into consideration the the significance level and P-values. <br> and have to decide manualy which model to use.\n",
+    "- It is Optional, can learn <a href='./backwards_elimination.ipynb'>'Backwards elimination'</a> here, "
+   ]
   }
  ],
  "metadata": {
