Correction in Polynomial regression

--- a/Regression/polynomial_linear_reg.ipynb
+++ b/Regression/polynomial_linear_reg.ipynb
@@ -303,14 +303,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "predicted salary [[143275.05827509]] for level [[6]] where real salary is [200000]\n"
+      "predicted salary [[143275.05827509]] for level [[6]] where real salary is [150000]\n"
      ]
     }
    ],
@@ -326,7 +326,7 @@
     "# to Predict Using Polynomial Regression, Convert the Test variables to Polynomial as well\n",
     "var = poly_reg.fit_transform(level)\n",
     "result_poly = lin_reg3.predict(var)\n",
-    "print(f'predicted salary {result_poly} for level {level} where real salary is {Y[level[0][0]]}')"
+    "print(f'predicted salary {result_poly} for level {level} where real salary is {Y[level[0][0]-1]}')"
    ]
   },
   {
