--- a/Regression/simple_linear_reg.ipynb
+++ b/Regression/simple_linear_reg.ipynb
@@ -257,7 +257,7 @@
     "Therefore, the equation of our simple linear regression model is:\n",
     "\n",
     "$$\\textrm{Salary} = 9345.94 \\times \\textrm{YearsExperience} + 26816.19$$\n",
-    "**$$\\textrm{Y} = m \\times \\textrm{X} + c$$**\n",
+    "**$$\\textrm{Y} = m \\textrm{X} + c$$**\n",
     "\n",
     "**Important Note:** To get these coefficients we called the \"coef_\" and \"intercept_\" attributes from our regressor object. Attributes in Python are different than methods and usually return a simple value or an array of values."
    ]
