Finished Logistics regression

--- a/Classification/Logistic_reg.ipynb
+++ b/Classification/Logistic_reg.ipynb
@@ -14,7 +14,7 @@
     "<img src='./class_photos/logisticReg.png' alt=\"Logistic regression Photo\" height='300'>\n",
     "\n",
     "Here,<br>\n",
-    "**p**:Probability of the dependent Variable, <br> **b_nX_n**:Independent varible coefficent\n",
+    "**p**:Probability of the dependent Variable, <br> **b<sub>n</sub>X<sub>n</sub>**:Independent varible coefficent\n",
     "\n",
     "### Maximum Likelihood\n",
     "-  It seeks to find the values of the model parameters that maximize the likelihood function, which measures how well the model explains the observed data.\n",
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -195,8 +195,8 @@
      "text": [
       "[57  1]\n",
       "[ 5 17]\n",
-      "57 correct 1 Incorrect  -> for Class 0 (Not purchesed)\n",
-      "5 correct 17 Incorrect  -> for Class 1 (purchesed)\n",
+      "57 correct pred. 1 Incorrect pred.  -> for Class 0 (Not purchesed)\n",
+      "5 Incorrect pred. 17 correct pred.  -> for Class 1 (purchesed)\n",
       "0.925\n"
      ]
     }
@@ -207,12 +207,34 @@
     "cm = confusion_matrix(y_test, y_pred)\n",
     "for col in cm:print(col)\n",
     "\n",
-    "print(cm[0][0],'correct',cm[0][1],\"Incorrect\",\" -> for Class 0 (Not purchesed)\")\n",
-    "print(cm[1][0],'correct',cm[1][1],\"Incorrect\", \" -> for Class 1 (purchesed)\")\n",
+    "print(cm[0][0],'correct pred.',cm[0][1],\"Incorrect pred.\",\" -> for Class 0 (Not purchesed)\")\n",
+    "print(cm[1][0],'Incorrect pred.',cm[1][1],\"correct pred.\", \" -> for Class 1 (purchesed)\")\n",
     "\n",
     "# finding the accuracy of predictionSS\n",
     "from sklearn.metrics import accuracy_score\n",
     "print(accuracy_score(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Visualizing the Training and the Test Set."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Importent Points\n",
+    "- Logistics regression is a linear classifier i.e the prediction curve is always a Straigh line(2D) and plain(3D). "
    ]
   }
  ],
