Finished Thompson sampling

--- a/Reinforcement_learning/UCB.ipynb
+++ b/Reinforcement_learning/UCB.ipynb
@@ -13,6 +13,8 @@
     "# Upper Confidence Bound (UCB)\n",
     "- UCB is a Reinforcement algorithm which uses simple strategy to maximize our profits or score\n",
     "\n",
+    "- Deterministic algoritem, where the final result, is absolute value and not a Probability.\n",
+    "\n",
     "### Multi-Armed Bandit problem\n",
     "\n",
     "<img src='https://upload.wikimedia.org/wikipedia/en/9/92/Multi-armed-bandit.jpg' alt='Multi-Armed Bandit' width='200px' >\n",
