--- a/NLP/NLP.ipynb
+++ b/NLP/NLP.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -227,41 +227,57 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Predicting Single (Custom) reviews**"
+    "### Predicting Single (Custom) reviews"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "the temperature inside is Hot, AC not working, --> Positive\n",
-      "The food is not good., --> Positive\n",
-      "I liked the pasta., --> Positive\n",
-      "the staff was very friendly, it was good, --> Positive\n",
-      "Nice place to visit, --> Positive\n",
-      "I hate the food, --> Negative\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "reviews= ['the temperature inside is Hot, AC not working',\n",
+    "new_review= ['the temperature inside is Hot, AC not working',\n",
     "            'The food is not good.',\n",
     "            'I liked the pasta.',\n",
     "            \"the staff was very friendly, it was good\",\n",
     "            \"Nice place to visit\",\n",
     "            \"I hate the food\"]\n",
     "\n",
-    "results = classifier.predict(cv.transform(reviews).toarray())\n",
-    "for i in range(0, len(reviews)):\n",
+    "new_corpus = []\n",
+    "for review in new_review:\n",
+    "    review = re.sub('[^a-zA-Z]', ' ', review)\n",
+    "    review = review.lower()\n",
+    "    review = review.split()\n",
+    "    review = [ps.stem(word) for word in review if not word in set(all_stopwords)]\n",
+    "    review = ' '.join(review)\n",
+    "    new_corpus.append(review)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "temperatur insid hot ac not work, --> Positive\n",
+      "food not good, --> Positive\n",
+      "like pasta, --> Positive\n",
+      "staff friendli good, --> Positive\n",
+      "nice place visit, --> Positive\n",
+      "hate food, --> Negative\n"
+     ]
+    }
+   ],
+   "source": [
+    "results = classifier.predict(cv.transform(new_corpus).toarray())\n",
+    "for i in range(0, len(new_corpus)):\n",
     "    if results[i] == 1:\n",
-    "        print(f\"{reviews[i]}, --> Positive\")\n",
+    "        print(f\"{new_corpus[i]}, --> Positive\")\n",
     "    else:\n",
-    "        print(f\"{reviews[i]}, --> Negative\")"
+    "        print(f\"{new_corpus[i]}, --> Negative\")"
    ]
   },
   {
@@ -273,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -304,36 +320,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "the temperature inside is Hot, AC not working, --> Negative\n",
-      "The food is not good., --> Negative\n",
-      "I liked the pasta., --> Negative\n",
-      "the staff was very friendly, it was good, --> Positive\n",
-      "Nice place to visit, --> Positive\n",
-      "I hate the food, --> Negative\n"
+      "temperatur insid hot ac not work, --> Negative\n",
+      "food not good, --> Negative\n",
+      "like pasta, --> Negative\n",
+      "staff friendli good, --> Positive\n",
+      "nice place visit, --> Positive\n",
+      "hate food, --> Negative\n"
      ]
     }
    ],
    "source": [
-    "reviews= ['the temperature inside is Hot, AC not working',\n",
-    "            'The food is not good.',\n",
-    "            'I liked the pasta.',\n",
-    "            \"the staff was very friendly, it was good\",\n",
-    "            \"Nice place to visit\",\n",
-    "            \"I hate the food\"]\n",
-    "\n",
-    "results = classifier2.predict(cv.transform(reviews).toarray())\n",
-    "for i in range(0, len(reviews)):\n",
+    "results = classifier2.predict(cv.transform(new_corpus).toarray())\n",
+    "for i in range(0, len(new_corpus)):\n",
     "    if results[i] == 1:\n",
-    "        print(f\"{reviews[i]}, --> Positive\")\n",
+    "        print(f\"{new_corpus[i]}, --> Positive\")\n",
     "    else:\n",
-    "        print(f\"{reviews[i]}, --> Negative\")"
+    "        print(f\"{new_corpus[i]}, --> Negative\")"
    ]
   },
   {
@@ -341,7 +350,7 @@
    "metadata": {},
    "source": [
     "- It seem like the SVM (non-linear kernal) performed Better, \n",
-    "    - The Accuraccy may be higher for SVM but the Type 2 error is all so very high, which may results in more incorrect negative, as it is the case in the example.\n",
+    "    - The Accuraccy may be higher for SVM but the Type 2 error is also very high, which may results in more incorrect negative, as it is the case in the example.\n",
     "\n",
     "- As for the Naive bayes Model it Performed Bad, the Type 1 error is more with lower Accuracy, resulting in More incorrect positive responces.\n",
     "\n",
