--- a/NLP/NLP.ipynb
+++ b/NLP/NLP.ipynb
@@ -354,7 +354,20 @@
     "\n",
     "- As for the Naive bayes Model it Performed Bad, the Type 1 error is more with lower Accuracy, resulting in More incorrect positive responces.\n",
     "\n",
-    "- Fine tunning the Regular Expression, improving the Cleannig methords, and Choosing the Optimal Classification Algoritem can help in Improve the Accuracy and Prediction Quality. "
+    "- Fine tunning the Regular Expression, improving the Cleannig methords, and Choosing the Optimal Classification Algoritem can help in Improve the Accuracy and Prediction Quality. \n",
+    "\n",
+    "### Other Methords to evaluate the performace\n",
+    "\n",
+    "(TP = # True Positives, TN = # True Negatives, FP = # False Positives, FN = # False Negatives):\n",
+    "\n",
+    "Accuracy = (TP + TN) / (TP + TN + FP + FN)\n",
+    "\n",
+    "Precision = TP / (TP + FP)\n",
+    "\n",
+    "Recall = TP / (TP + FN)\n",
+    "\n",
+    "F1 Score = 2 * Precision * Recall / (Precision + Recall)\n",
+    "\n"
    ]
   }
  ],
